--- a/app/styles/css/sass/_icons.sass
+++ b/app/styles/css/sass/_icons.sass
@@ -11,3 +11,18 @@
 
 .cms-callTeamMember
   content: url('../../images/call.svg')
+
+%time-picker-icon
+  background: $white url("../../images/clock.svg") 97% no-repeat
+  background-size: 23px 23px
+  vertical-align: middle
+
+%data-picker-icon
+  background: $white url("../../images/calendar.svg") 96% no-repeat
+  background-size: 23px 23px
+  vertical-align: middle
+
+%drop-down-arrow
+  background: $white url("../../images/dropdown_arrow.svg") 97.5% no-repeat
+  background-size: 20px 20px
+  vertical-align: middle
