--- a/app/styles/css/sass/_variables.sass
+++ b/app/styles/css/sass/_variables.sass
@@ -19,8 +19,9 @@ $crisis-detail-arrow-size: 20px
 
 $initiate-conf-icon-size: 180px
 
+$big-spacing: 20px
 $std-side-spacing: 15px
 $std-top-spacing: 10px
 $std-small-spacing: 5px
 $medium-spacing: 8px
-$big-spacing: 20px
+$min-spacing: 3px
