Refined Request ResilencySupport Page and made class changes in the view too

--- a/app/styles/css/sass/_components.sass
+++ b/app/styles/css/sass/_components.sass
@@ -73,6 +73,8 @@
   font-weight: bold
   @extend %section-spacing
 
+%sub-section-spacing
+  padding-top: $std-top-spacing
+
 .cms-section-subheading
   font-weight: normal //to overwrite label style set as bold in bootstrap
-  //padding-top: $std-top-spacing
