Grouped list views and moved to _list.sass

--- a/app/styles/css/sass/pages/_selectTeam.sass
+++ b/app/styles/css/sass/pages/_selectTeam.sass
@@ -1,52 +1,58 @@
-.cms-searchTeam-content
-  font-family: "HelveticaNeue"
-  color: $black
-  padding-top: 46px
-  +footer-space
+//.cms-search-nav
+//  margin-top: $crisis-list-icon-width
+//
+//  .cms-search-container
+//    height: $crisis-list-icon-height
+//    background-color: $grey9
+//    padding: $medium-spacing
+//    +border($grey3)
+//
+//    .cms-search-box
+//      width: 100%
+//      border-radius: $input-border-radius
+//      +border($white)
+//      padding: $std-small-spacing $std-top-spacing
+//
+//    .cms-search-icon
+//      background: $white url('../../images/searchBoxText.png') no-repeat 46%
+//      background-size: $search-box-bg-icon-size
+//      &:focus
+//        background-image: none
+//
+//.cms-search-results
+//  font-family: $std-font-normal
+//  color: $black
+//  padding-top: $crisis-list-icon-height
+//  +footer-space
+//
+//  .cms-list-item-container
+//    padding: $zero
+//    margin-top: 2px
+//    .cms-no-records
+//      text-align: center
+//      width: 100%
+//      padding: $std-top-spacing 15px
+//      display: inline-block
+//
+//    .cms-list-item-text
+//      background-color: $white
+//      +border-position('bottom', $grey3)
+//      font-size: $content_container_size
+//      font-weight: 400
+//      color: $black
+//      padding: $std-top-spacing
+//      &:last-of-type
+//        border: none
+//
+//    .cms-search-filter-character
+//      padding: $zero $std-side-spacing
+//      background-color: $grey10
+//      font-size: $title_font_size
+//      color: $blue
+//      font-weight: 700
+//      display: block
 
-.cms-selectTeam-searchContainer
-  height: 50px
-  background-color: $grey9
-  padding: 8px
-  +border($grey3)
-
-.cms-selectTeam-searchBox
-  width: 100%
-  border-radius: 4px
-  border: 1px
-  line-height: 27px
-
-.cms-selectTeam-searchIcon
-  background: $white url('../../images/searchBoxText.png') no-repeat 46%
-  background-size: 69px
-  &:focus
-    background-image: none
-
-.cms-selectTeam-headerRow
-  background-color: $grey10
-  font-size: $title_font_size
-  color: $blue
-  font-weight: 700
-  padding: 0
-  height: auto
-
-.cms-selectTeam-otherRow
-  height: 44px
-  font-size: $content_container_size
-  font-weight: 400
-  color: $black
-  cursor: pointer
-  padding: 12px 0 0 15px
-
-.cms-searchTeam-availableTeams
-  padding: 12px 0 0 15px
-
+//Do we need this really..?
 .cms-selectTeam-listSelectIcon
   background-image: url('../../images/list_select_bg.png')
   color: $white
-
-.cms-searchTeam-content .list-group-item:first-child, .crisis-mgmt-searchTeam-content .list-group-item:last-child
-  border-radius: 0
-
-.cms-selectTeam-searchNav
-  margin-top: 60px
