--- a/app/styles/css/sass/pages/_viewDocumentsList.sass
+++ b/app/styles/css/sass/pages/_viewDocumentsList.sass
@@ -1,52 +1,52 @@
-.cms-documentsList-content
-  font-family: "HelveticaNeue"
-  color: $black
-  padding-top: 46px
-  +footer-space
-
-.cms-documentsList-searchContainer
-  height: 50px
-  background-color: $grey9
-  padding: 8px
-
-.cms-documentsList-searchBox
-  width: 100%
-  border-radius: 4px
-  border: 1px
-  line-height: 27px
-
-.cms-documentsList-searchIcon
-  background: $white url('../../images/searchBoxText.png') no-repeat 46%
-  background-size: 69px
-  &:focus
-    background-image: none
-
-.cms-documentsList-headerRow
-  background-color: $grey10
-  font-size: $title_font_size
-  color: $blue
-  font-weight: 700
-  padding: 0
-  height: auto
-
-.cms-documentsList-otherRow
-  height: auto
-  font-size: $content_container_size
-  font-weight: 400
-  color: $black
-  cursor: pointer
-  padding: 12px 15px
-
-.cms-documentsList-availableDocuments
-  padding: 12px 0 0 15px
-
-.cms-documentsList-listSelectIcon
-  background-image: url('../../images/list_select_bg.png')
-  color: $white
-
-.cms-documentsList-content .list-group-item
-  &:first-child, &:last-child
-    border-radius: 0
-
-.cms-documentsList-searchNav
-  margin-top: 60px
+//.cms-documentsList-content
+//  font-family: "HelveticaNeue"
+//  color: $black
+//  padding-top: 46px
+//  +footer-space
+//
+//.cms-documentsList-searchContainer
+//  height: 50px
+//  background-color: $grey9
+//  padding: 8px
+//
+//.cms-documentsList-searchBox
+//  width: 100%
+//  border-radius: 4px
+//  border: 1px
+//  line-height: 27px
+//
+//.cms-documentsList-searchIcon
+//  background: $white url('../../images/searchBoxText.png') no-repeat 46%
+//  background-size: 69px
+//  &:focus
+//    background-image: none
+//
+//.cms-documentsList-headerRow
+//  background-color: $grey10
+//  font-size: $title_font_size
+//  color: $blue
+//  font-weight: 700
+//  padding: 0
+//  height: auto
+//
+//.cms-documentsList-otherRow
+//  height: auto
+//  font-size: $content_container_size
+//  font-weight: 400
+//  color: $black
+//  cursor: pointer
+//  padding: 12px 15px
+//
+//.cms-documentsList-availableDocuments
+//  padding: 12px 0 0 15px
+//
+//.cms-documentsList-listSelectIcon
+//  background-image: url('../../images/list_select_bg.png')
+//  color: $white
+//
+//.cms-documentsList-content .list-group-item
+//  &:first-child, &:last-child
+//    border-radius: 0
+//
+//.cms-documentsList-searchNav
+//  margin-top: 60px
