--- a/app/styles/css/main.sass
+++ b/app/styles/css/main.sass
@@ -6,6 +6,7 @@
 @import 'sass/base' 
 @import 'sass/header'
 @import 'sass/footer' 
+@import 'sass/list'
 
 /*** include pages ***/ 
 @import 'sass/pages/crisisListView'
