--- a/app/styles/css/sass/_variables.sass
+++ b/app/styles/css/sass/_variables.sass
@@ -24,3 +24,9 @@ $std-top-spacing: 10px
 $std-small-spacing: 5px
 $medium-spacing: 8px
 $big-spacing: 20px
+$input-border-radius: 4px
+
+$search-box-bg-icon-size: 69px
+
+$crisis-list-icon-height: 50px
+$crisis-list-icon-width: 60px
