--- a/app/styles/css/sass/pages/_home.sass
+++ b/app/styles/css/sass/pages/_home.sass
@@ -1,43 +1,43 @@
-.cms-home-container
-  height: 100%
-  +footer-space
-  //not needed for border boxing
-  //margin-top: -54px
-  //padding-top: 54px
-
-.cms-home-heading
-  /*  font-family: $std-font-normal
-    font-size: $base-font-size
-    font-weight: normal
-    padding-left: $list-side-spacing
-    padding-top: 25px*/
-
-
-.cms-home-list
-  padding-left: $zero
-  margin-bottom: $zero
-
-.cms-home-group-item
-  background-color: $grey-background
-
-.cms-home-listImageContainer
-  display: inline-block
-  position: relative
-
-.cms-home-listImageText
-  display: inline-block
-  position: relative
-  color: $black
-  width: 70%
-  font-family: $std-font-light
-  font-size: $list-font-size
-  //padding-top: 20px
-  vertical-align: middle
-  padding-left: $list-side-spacing
-
-.cms-home-headingIcon
-  height: $list-icon-size
-  width: $list-icon-size
+//.cms-home-container
+//  height: 100%
+//  +footer-space
+//  //not needed for border boxing
+//  //margin-top: -54px
+//  //padding-top: 54px
+//
+//.cms-home-heading
+//  /*  font-family: $std-font-normal
+//    font-size: $base-font-size
+//    font-weight: normal
+//    padding-left: $list-side-spacing
+//    padding-top: 25px*/
+//
+//
+//.cms-home-list
+//  padding-left: $zero
+//  margin-bottom: $zero
+//
+//.cms-home-group-item
+//  background-color: $grey-background
+//
+//.cms-home-listImageContainer
+//  display: inline-block
+//  position: relative
+//
+//.cms-home-listImageText
+//  display: inline-block
+//  position: relative
+//  color: $black
+//  width: 70%
+//  font-family: $std-font-light
+//  font-size: $list-font-size
+//  //padding-top: 20px
+//  vertical-align: middle
+//  padding-left: $list-side-spacing
+//
+//.cms-home-headingIcon
+//  height: $list-icon-size
+//  width: $list-icon-size
 
 .badge
   font-family: $std-font-light
@@ -51,9 +51,9 @@
   height: $badge-size
   font-size: $badge-font-size
 
-/* Media queries for xhdpi(W*H: 720*1080) and xxhdpi(W*H: 1080*1920) resolution
-
-@media (min-device-width: 720px) and (min-device-height: 1080px) , (min-device-width: 1080px) and (min-device-height: 1920px)
-  .cms-home-group-item
-    height: 145px !important
-    padding: 35px $list-side-spacing !important
+///* Media queries for xhdpi(W*H: 720*1080) and xxhdpi(W*H: 1080*1920) resolution
+//
+//@media (min-device-width: 720px) and (min-device-height: 1080px) , (min-device-width: 1080px) and (min-device-height: 1920px)
+//  .cms-home-group-item
+//    height: 145px !important
+//    padding: 35px $list-side-spacing !important
