--- a/app/styles/css/main.sass
+++ b/app/styles/css/main.sass
@@ -1,7 +1,7 @@
 @import 'sass/variables'
 @import 'sass/colors'
 @import 'sass/fonts'
-@import 'sass/_mixins'
+@import 'sass/mixins'
 @import 'sass/icons'
 @import 'sass/components'
 @import 'sass/base' 
