--- a/app/styles/css/sass/pages/_requestResiliencySupport.sass
+++ b/app/styles/css/sass/pages/_requestResiliencySupport.sass
@@ -1,20 +1,38 @@
-.cms-rrs-masterContainer
-  padding: $zero $std-side-spacing
-  color: $grey7
-  +footer-space
-  .cms-textArea
-    margin-top: $std-small-spacing
-  .cms-section-heading
-    @extend %sub-section-spacing
+.cms-rrs-text
+//can be removed
+
+.cms-rrs-sectionHeading
+  font-weight: bold
 
 .cms-rrs-userName
   font-weight: bold
   color: $blue
 
+.cms-rrs-sendAlertButton
+  //can be used directly in view
+  @extend .form-button
+.cms-rrs-masterContainer
+  padding: $std-side-spacing
+  color: $grey7
+  +footer-space
+
+.cms-rrs-userInfoHeading
+  padding-top: $std-top-spacing
+
+.cms-rrs-problemDescription
+  //can replace class directly in the view
+  @extend .cms-textArea
+
+.cms-rrs-problemDescriptionContainer
+  margin: $std-small-spacing $zero
+
+.cms-rrs-requestDivider
+  @extend .separator
+
 /* Media queries for xhdpi(W*H: 720*1080) and xxhdpi(W*H: 1080*1920) resolution
 
 @media (min-device-width: 720px) and (min-device-height: 1080px)
   .cms-rrs-masterContainer
-    padding: $big-spacing $std-side-spacing 90px
-    .form-button
-      margin-top: 45px
+    padding: 20px $std-side-spacing 90px
+  .cms-rrs-sendAlertButton
+    margin-top: 45px
