--- a/app/styles/css/sass/pages/_mapView.sass
+++ b/app/styles/css/sass/pages/_mapView.sass
@@ -13,6 +13,9 @@
   @extend .flex-vcenter
   width: 100%
 
+.cms-map-severityBadge
+  content: url('../../images/warning_icon.svg')
+
 .cms-map-crisisDurationContainer
   text-align: right
 .cms-map-navigationIcon
