Refined view Wallet Card changes and made changes in the view

--- a/app/styles/css/sass/_icons.sass
+++ b/app/styles/css/sass/_icons.sass
@@ -9,20 +9,30 @@
 .cms-accordion-collapseIcon
   content: url('../../images/Accordianup.svg')
 
-.cms-callTeamMember
+.cms-call-team-member
   content: url('../../images/call.svg')
+
+.cms-profile-icon
+  content: url('../../images/avataricon.svg')
+  width: 100%
+
+.cms-mobile-icon
+  background: url("../../images/mobile-phone.svg") right no-repeat
+  background-size: $mobile-icon-size
+  width: $mobile-icon-size
+  height: $mobile-icon-size
 
 %time-picker-icon
   background: $white url("../../images/clock.svg") 97% no-repeat
-  background-size: 23px 23px
+  background-size: 23px
   vertical-align: middle
 
 %data-picker-icon
   background: $white url("../../images/calendar.svg") 96% no-repeat
-  background-size: 23px 23px
+  background-size: 23px
   vertical-align: middle
 
 %drop-down-arrow
   background: $white url("../../images/dropdown_arrow.svg") 97.5% no-repeat
-  background-size: 20px 20px
+  background-size: 20px
   vertical-align: middle
