--- a/app/styles/css/sass/_variables.sass
+++ b/app/styles/css/sass/_variables.sass
@@ -19,6 +19,11 @@ $crisis-detail-arrow-size: 20px
 
 $initiate-conf-icon-size: 180px
 
+$profile-icon-size: 50px
+$mobile-icon-size: 31px
+$wallet-card-item-height: 80px
+$wallet-card-phone-icon-size: 21px
+
 $big-spacing: 20px
 $std-side-spacing: 15px
 $std-top-spacing: 10px
