--- a/app/styles/css/sass/pages/_crisisDetail.sass
+++ b/app/styles/css/sass/pages/_crisisDetail.sass
@@ -1,6 +1,4 @@
 .cms-cdv-content
-  font-family: $std-font-normal
-  font-size: $content_container_size
   color: $black
   &.panel-group
     +footer-space
@@ -24,8 +22,9 @@
   @extend .flex-vcenter
   margin: $zero
 
-.glyphicon-chevron-up
-  color: $black !important
+//not used. need to revisit
+/*.glyphicon-chevron-up
+  color: $black !important*/
 
 .cms-cdv-timeOccured
   padding-right: $zero
