--- a/app/styles/css/sass/pages/_requestResiliencySupport.sass
+++ b/app/styles/css/sass/pages/_requestResiliencySupport.sass
@@ -6,10 +6,8 @@
     margin-top: $std-small-spacing
   .cms-section-heading
     @extend %sub-section-spacing
-
-.cms-rrs-userName
-  font-weight: bold
-  color: $blue
+  .cms-member-name
+    font-weight: bold
 
 /* Media queries for xhdpi(W*H: 720*1080) and xxhdpi(W*H: 1080*1920) resolution
 
