--- a/app/styles/css/sass/pages/_crisisDetail.sass
+++ b/app/styles/css/sass/pages/_crisisDetail.sass
@@ -3,17 +3,8 @@
   &.panel-group
     +footer-space
 
-
-.cms-cdv-accordion-header
-  color: $blue
-  font-weight: bold
-  font-size: $base-font-size
-  &:hover
-    text-decoration: none
-
 .cms-cdv-accordion-body
   background-color: $grey10
-  padding: $zero $zero $zero 15px
 
 .cms-cdv-pointOfContact
   @extend .zero-pad
@@ -24,10 +15,6 @@
   height: auto
   padding: $medium-spacing $std-side-spacing
   border-width: 1px $zero
-
-.cms-cdv-severity
-  width: 100%
-  content: url('../../images/warning_icon.svg')
 
 .cms-cdv-main
   padding: $std-side-spacing
@@ -49,29 +36,16 @@ a.cms-cdv-timeOccuredLink
   display: block
 
 .cms-cdv-crisisDetail
-  padding-left: $zero 
+  padding-left: $zero
 
-.cms-cdv-locationInfo-firstItem, .cms-cdv-updates-firstItem
-  padding-top: $std-side-spacing !important
-
-.cms-cdv-locationInfo-lastItem, .cms-cdv-updates-lastItem
-  padding-bottom: $std-side-spacing + 1 !important
-
-.cms-cdv-locationInfo-remainingItems, .cms-cdv-updates-remainingItems
-  padding: $medium-spacing 0
+.cms-accordion-info-item
+  padding-top: $std-top-spacing
+  &:first-child
+    padding-top: $zero
 
 .cms-cdv-icon
   width: $crisis-detail-arrow-size
   height: $crisis-detail-arrow-size
-
-.cms-cdv-expandIcon
-  content: url('../../images/Accordiandown.svg')
-
-.cms-cdv-collapseIcon
-  content: url('../../images/Accordianup.svg')
-
-.cms-cdv-callTeamMember
-  content: url('../../images/call.svg')
 
 .cms-cdv-content .list-group-item
   &:first-child, &:last-child
