--- a/app/styles/css/sass/_variables.sass
+++ b/app/styles/css/sass/_variables.sass
@@ -29,6 +29,7 @@ $std-side-spacing: 15px
 $std-top-spacing: 10px
 $std-small-spacing: 5px
 $medium-spacing: 8px
+$min-spacing: 3px
 $input-border-radius: 4px
 
 $search-box-bg-icon-size: 69px
