--- a/app/styles/css/sass/pages/_scheduledMeeting.sass
+++ b/app/styles/css/sass/pages/_scheduledMeeting.sass
@@ -1,53 +1,18 @@
-.cms-sm-text
-  font: "HelveticaNeue"
-  font-size: $content_container_size
-
 .cms-sm-meetingMasterContainer
+  padding: $zero $std-side-spacing
+  color: $grey7
   +footer-space
 
 .cms-sm-meetingContainer
-  padding: 16px 0 5px 15px
-  color: $grey7
   font-weight: bold
-  background-color: $grey4
-  width: 100%
-
-.cms-sm-meetingDetails
-  padding: 3px 15px 3px 0
-  width: 100%
+  padding-top: $big-spacing
 
 .cms-sm-meetingInfoContainer
-  padding: 15px 12.5px 0 12.5px
+  padding: $std-side-spacing
   background-color: $white
-  width: 100%
-
-.cms-sm-startMeetingContainer
-  padding: 10px 0 30px 0
-  background-color: $white
-  width: 100%
-
-.cms-sm-meetingDetail
-  font: "HelveticaNeue"
-  font-size: $content_container_size
-  color: $black
-  padding-bottom: 10px
+  margin-top: $std-small-spacing
   font-weight: normal
 
 .cms-sm-meetingTime
   color: $blue
   font-size: $content_small_size
-
-.cms-sm-startMeeting
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, $blue), color-stop(1, $blue2))
-  background-color: $blue2
-  border-radius: 5px
-  display: inline-block
-  color: $white
-  font-family: sans-serif
-  font-size: $base-font-size
-  font-style: normal
-  height: 40px
-  line-height: 40px
-  width: 100%
-  text-decoration: none
-  +text-center-n-bold
