Refined initiateConference.html and made changes in the view

--- a/app/styles/css/sass/_icons.sass
+++ b/app/styles/css/sass/_icons.sass
@@ -22,6 +22,12 @@
   width: $mobile-icon-size
   height: $mobile-icon-size
 
+.cms-conference-icon
+  height: $initiate-conf-icon-size
+  width: $initiate-conf-icon-size
+  background-size: 100%
+  background-image: url("../../images/initiateConference.svg")
+
 %time-picker-icon
   background: $white url("../../images/clock.svg") 97% no-repeat
   background-size: 23px
