--- a/app/styles/css/sass/pages/_initiateConference.sass
+++ b/app/styles/css/sass/pages/_initiateConference.sass
@@ -1,24 +1,7 @@
-.conferenceTitle
-  text-align: center
-  height: 54px
-  padding-top: $std-top-spacing
-  +border-position('bottom',$white)
-  background-color: $white
-  width: 100%
-
 .cms-ic-container
-  background-color: $grey-background
-  width: 100%
-  padding: (3*$big-spacing) $std-side-spacing $std-top-spacing
+  padding: (3*$big-spacing) $std-side-spacing
   +footer-space
-
-.cms-ic-conferenceIcon
-  margin: $zero auto
-  height: $initiate-conf-icon-size
-  width: $initiate-conf-icon-size
-  background-size: 100%
-  background-image: url("../../images/initiateConference.svg")
-
-.cms-ic-conferenceButton
-  margin-top: 3*$big-spacing
-  @extend .form-button-div
+  .form-button-div
+    margin-top: 3*$big-spacing
+  .cms-conference-icon
+    margin: $zero auto
