--- a/app/styles/css/sass/_icons.sass
+++ b/app/styles/css/sass/_icons.sass
@@ -16,11 +16,77 @@
   content: url('../../images/avataricon.svg')
   width: 100%
 
+.cms-warning-icon
+  background: url("../../images/warning_icon.svg") no-repeat
+  height: $crisis-list-icon-height
+  width: $crisis-list-icon-width
+  margin: $std-side-spacing $std-top-spacing
+  background-size: cover
+
+.cms-right-arrow-icon
+  padding-left: $crisis-item-spacing
+  background: url("../../images/icon_listnav.svg") right no-repeat
+  background-size: $crisis-item-spacing
+
+.cms-search-list-icon
+  background: $white url('../../images/searchBoxText.png') no-repeat 46%
+  background-size: $search-box-bg-icon-size
+  &:focus
+    background-image: none
+
 .cms-mobile-icon
   background: url("../../images/mobile-phone.svg") right no-repeat
   background-size: $mobile-icon-size
   width: $mobile-icon-size
   height: $mobile-icon-size
+
+.cms-alert-icon
+  width: $header_icon_width
+  margin-right: $std-top-spacing
+  content: url('../../images/Icon_alert.svg')
+
+.cms-alert-icon-active
+  width: $header_icon_width
+  margin-right: $std-top-spacing
+  content: url('../../images/Icon_alert_active.svg')
+
+.cms-list-icon
+  width: $header_icon_width
+  margin-right: $std-top-spacing
+  content: url('../../images/Icon_list.svg')
+
+.cms-map-icon
+  width: $header_icon_width
+  margin-right: $std-top-spacing
+  content: url('../../images/Icon_map.svg')
+
+.cms-back-icon
+  width: $header_icon_width
+  content: url('../../images/Icon_back.svg')
+
+.cms-active-crisis-icon
+  content: url('../../images/btmtab_Icon_ActiveCrisis.svg')
+
+.cms-active-crisis-icon-active
+  content: url('../../images/btmtab_Icon_ActiveCrisis_active.svg')
+
+.cms-respond-crisis-icon
+  content: url('../../images/btmtab_Icon_RespondCrisis.svg')
+
+.cms-respond-crisis-icon-active
+  content: url('../../images/btmtab_Icon_RespondCrisis_active.svg')
+
+.cms-policy-icon
+  content: url('../../images/btmtab_Icon_CMPolicies.svg')
+
+.cms-policy-icon-active
+  content: url('../../images/btmtab_Icon_CMPolicies_active.svg')
+
+.cms-wallet-card-icon
+  content: url('../../images/btmtab_Icon_WalletCard.svg')
+
+.cms-wallet-card-icon-active
+  content: url('../../images/btmtab_Icon_WalletCard_active.svg')
 
 %time-picker-icon
   background: $white url("../../images/clock.svg") 97% no-repeat
