--- a/app/styles/css/sass/_mixins.sass
+++ b/app/styles/css/sass/_mixins.sass
@@ -3,13 +3,9 @@
   white-space: nowrap
   text-overflow: ellipsis
 	
-=text-center-n-bold
+=center-bold-text
   text-align: center
   font-weight: bold
-	
-=float-right-10
-  float: right
-  margin-right: 10px
 
 =border($color, $border-width: 1px)
   border: $border-width solid $color
