--- a/app/styles/css/sass/_header.sass
+++ b/app/styles/css/sass/_header.sass
@@ -1,7 +1,7 @@
 .cms-header-headerContainer
   background: $white
   +border-position('bottom', $grey1)
-  padding: 15px 10px
+  padding: $std-side-spacing $std-top-spacing
   text-align: center
   width: 100%
 
@@ -15,26 +15,15 @@
     width: 65%
 
   .cms-header-backButtonContainer
-    float: left
     .cms-header-backButton
-      width: 25px
-      content: url('../../images/Icon_back.svg')
+      @extend .cms-back-icon
 
   .cms-crisisListContainer
-    float: right
     .cms-header-alertIcon
-      width: 25px
-      margin-right: 10px
-      content: url('../../images/Icon_alert.svg')
+      @extend .cms-alert-icon
     .cms-header-alertIconActive
-      width: 25px
-      margin-right: 10px
-      content: url('../../images/Icon_alert_active.svg')
+      @extend .cms-alert-icon-active
     .cms-header-crisisListIcon
-      width: 25px
-      margin-right: 10px
-      content: url('../../images/Icon_list.svg')
+      @extend .cms-list-icon
     .cms-header-crisisMapIcon
-      width: 25px
-      margin-right: 10px
-      content: url('../../images/Icon_map.svg')
+      @extend .cms-map-icon
