reversed scheduled meetings sass

--- a/app/styles/css/sass/_list.sass
+++ b/app/styles/css/sass/_list.sass
@@ -117,7 +117,7 @@
         display: inline-block
 
     .cms-list-nav
-      height: 20px
+      height: $big-spacing
 
 /* Media queries for xhdpi(W*H: 720*1080) and xxhdpi(W*H: 1080*1920) resolution
 @media (min-device-width: 720px) and (min-device-height: 1080px) , (min-device-width: 1080px) and (min-device-height: 1920px)
