Login Page Changes

--- a/app/styles/css/sass/_colors.sass
+++ b/app/styles/css/sass/_colors.sass
@@ -1,27 +1,27 @@
 $white: #ffffff
 $black: #000000
 
-$blue: #0064d2
-$blue1: #3C71CB
-$blue2: #0354a2
-$blue3: #273ef6
+$blue: #0064d2 // member name, time
+$blue1: #3C71CB // login wallet card text; now unused and changed to $blue
+$blue2: #0354a2 // form submit button background stop1
+$blue3: #273ef6 // form submit button background
 
-$grey1: #AFAFAF
-$grey2: #88919c
-$grey3: #d2d4d6
-$grey4: #eeeff1
-$grey5: #E0E4E5
-$grey6: #A5A8AC
-$grey7: #4e4d4c
-$grey8: #858F93
-$grey9: #d8dde1
-$grey10: #ECF0F3
-$grey11: #cccccc
-$grey12: #DEE1E4
-$grey13: #6f7a80
-$grey14: #F6F7FB
-$light-grey: #b3b2b2
-$faded-grey: #cad1d4
+$grey1: #AFAFAF // header and footer border
+$grey2: #88919c // footer text
+$grey3: #d2d4d6 // list border color
+$grey4: #eeeff1 // list background color, home badge border color
+$grey5: #E0E4E5 // input border color
+$grey6: #A5A8AC // unused
+$grey7: #4e4d4c // form pages text
+$grey8: #858F93 // used in time picker custom changes
+$grey9: #d8dde1 // search container background color
+$grey10: #ECF0F3 //search filter character, accordion body
+$grey11: #cccccc //separator
+$grey12: #DEE1E4 // unused
+$grey13: #6f7a80 //text area, alert message text color
+$grey14: #F6F7FB // point of contact background
+$light-grey: #b3b2b2 //placeholder text
+$faded-grey: #cad1d4 //wallet card separator in login; now unused and changed to $grey11
 
 $grey-background: $grey4
 $grey-input-border: $grey5
