--- a/app/styles/css/sass/_icons.sass
+++ b/app/styles/css/sass/_icons.sass
@@ -1,3 +1,7 @@
+.cms-login-walletCard-icon
+  content: url('../../images/icon-wallet-card.png')
+  width: 40px
+
 .cms-severity-icon
   content: url('../../images/warning_icon.svg')
   .cms-severity-box &
