--- a/app/styles/css/sass/_mixins.sass
+++ b/app/styles/css/sass/_mixins.sass
@@ -15,3 +15,11 @@
 
 =footer-space
   padding-bottom: $footer-space
+
+=label-text($color, $font-size, $font-family, $padding)
+  color: $color
+  font-size:  $font-size
+  font-family: $font-family
+  padding: $padding
+
+
