updated build task
moved icons in header and footer to icons.sass

--- a/app/styles/css/sass/_icons.sass
+++ b/app/styles/css/sass/_icons.sass
@@ -40,52 +40,52 @@
   width: $mobile-icon-size
   height: $mobile-icon-size
 
-.cms-alert-icon
+.cms-header-alertIcon
   width: $header_icon_width
   margin-right: $std-top-spacing
   content: url('../../images/Icon_alert.svg')
 
-.cms-alert-icon-active
+.cms-header-alertIconActive
   width: $header_icon_width
   margin-right: $std-top-spacing
   content: url('../../images/Icon_alert_active.svg')
 
-.cms-list-icon
+.cms-header-crisisListIcon
   width: $header_icon_width
   margin-right: $std-top-spacing
   content: url('../../images/Icon_list.svg')
 
-.cms-map-icon
+.cms-header-crisisMapIcon
   width: $header_icon_width
   margin-right: $std-top-spacing
   content: url('../../images/Icon_map.svg')
 
-.cms-back-icon
+.cms-header-backButton
   width: $header_icon_width
   content: url('../../images/Icon_back.svg')
 
-.cms-active-crisis-icon
+.cms-footer-activeCrisisIcon
   content: url('../../images/btmtab_Icon_ActiveCrisis.svg')
 
-.cms-active-crisis-icon-active
+.cms-footer-activeCrisisIcon-active
   content: url('../../images/btmtab_Icon_ActiveCrisis_active.svg')
 
-.cms-respond-crisis-icon
+.cms-footer-respondCrisisIcon
   content: url('../../images/btmtab_Icon_RespondCrisis.svg')
 
-.cms-respond-crisis-icon-active
+.cms-footer-respondCrisisIcon-active
   content: url('../../images/btmtab_Icon_RespondCrisis_active.svg')
 
-.cms-policy-icon
+.cms-footer-CMPolicyIcon
   content: url('../../images/btmtab_Icon_CMPolicies.svg')
 
-.cms-policy-icon-active
+.cms-footer-CMPolicyIcon-active
   content: url('../../images/btmtab_Icon_CMPolicies_active.svg')
 
-.cms-wallet-card-icon
+.cms-footer-walletCardIcon
   content: url('../../images/btmtab_Icon_WalletCard.svg')
 
-.cms-wallet-card-icon-active
+.cms-footer-walletCardIcon-active
   content: url('../../images/btmtab_Icon_WalletCard_active.svg')
 
 .cms-conference-icon
